# sf-migration-toolkit

./: .dockerignore  .gitignore  README.md  config.py  connection.py  dependencies.py  discovery.py  docker-compose.yml  main.py  mainv2.py  memory.md  pyproject.toml  requirements.txt  run-local-docker.bat  run-local-native.bat  stop-local-docker.bat  stop-local-native.bat  test_databases.py  test_imports.py  utils.py
.devcontainer/: devcontainer.json
backend/: Dockerfile  main.py  requirements.txt
backend/app/: __init__.py  config.py  constants.py  db.py  main.py
backend/app/api/: analysis.py  connections.py  health.py  integration.py  migrations.py
backend/app/schemas/: analysis.py  common.py  connections.py  integration.py  jobs.py  settings.py
backend/app/services/: analysis_service.py  integration_service.py  job_runner.py  job_store.py  snowflake_service.py  validation_service.py
frontend/: Dockerfile  README.md  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  providers.tsx
frontend/src/components/dashboard/: DashboardClient.tsx  DashboardContext.tsx
frontend/src/components/dashboard/steps/: Step1Connections.tsx  Step2SetupAndAnalysis.tsx  Step3MigrationRun.tsx  Step4MonitorAndHistory.tsx
frontend/src/lib/: api.ts
frontend/src/types/: api.ts
migration/: apps.py  cortex.py  orchestrator.py  policies.py  procedures.py  stages.py  tables.py  tasks.py  views.py
