[project]
name = "snowflake-migrate"
version = "0.1.0"
description = "Standalone Snowflake migration toolkit with FastAPI + Next.js UI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "snowflake-connector-python>=4.4.0",
  "sqlglot>=30.4.2",
  "fastapi>=0.135.3",
  "uvicorn[standard]>=0.44.0",
  "pydantic>=2.12.5",
]

[dependency-groups]
dev = []
